refactor : ConsoleOutputView의 메서드에서 메서드를 추출하였다.